force-app/main/default/objects/New_Dealer_Training__c/New_Dealer_Training__c.object-meta.xml
<CustomObject>
    <label>New Dealer Training</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Dealer Trainings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>