force-app/main/default/objects/New_Dealer_Training__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>New Dealer Trainings</relationshipLabel>
    <relationshipName>Security_New_Dealer_Trainings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>