force-app/main/default/objects/New_Dealer_Training__c/fields/ACP_Focused__c.field-meta.xml
<CustomField>
    <fullName>ACP_Focused__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACP Focused</label>
    <type>Checkbox</type>
</CustomField>