force-app/main/default/objects/New_Dealer_Training__c/fields/Assigned_DID__c.field-meta.xml
<CustomField>
    <fullName>Assigned_DID__c</fullName>
    <label>Assigned DID</label>
    <type>Date</type>
</CustomField>