force-app/main/default/objects/New_Dealer_Training__c/fields/Assisted_in_Logins_for_Sellers__c.field-meta.xml
<CustomField>
    <fullName>Assisted_in_Logins_for_Sellers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assisted in Agent Setup</label>
    <type>Checkbox</type>
</CustomField>