force-app/main/default/objects/New_Dealer_Training__c/fields/ATTUID__c.field-meta.xml
<CustomField>
    <fullName>ATTUID__c</fullName>
    <label>ATTUID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>