force-app/main/default/objects/New_Dealer_Training__c/fields/BAC_Benefits_Waiver_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>BAC_Benefits_Waiver_Guidelines__c</fullName>
    <label>BAC: Benefits Waiver &amp; Guidelines</label>
    <type>Date</type>
</CustomField>