force-app/main/default/objects/New_Dealer_Training__c/fields/BAC_Selling_w_Intergrity__c.field-meta.xml
<CustomField>
    <fullName>BAC_Selling_w_Intergrity__c</fullName>
    <label>BAC: Selling w/ Intergrity</label>
    <type>Date</type>
</CustomField>