force-app/main/default/objects/New_Dealer_Training__c/fields/BDM_Training_Complete__c.field-meta.xml
<CustomField>
    <fullName>BDM_Training_Complete__c</fullName>
    <label>New DLR Dev Call Completed Date</label>
    <type>Date</type>
</CustomField>