force-app/main/default/objects/New_Dealer_Training__c/fields/Best_Practices__c.field-meta.xml
<CustomField>
    <fullName>Best_Practices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Best Practices</label>
    <type>Checkbox</type>
</CustomField>