force-app/main/default/objects/New_Dealer_Training__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <label>Billing</label>
    <type>Date</type>
</CustomField>