force-app/main/default/objects/New_Dealer_Training__c/fields/Book_Marketing_Call_via_Calendar_Link__c.field-meta.xml
<CustomField>
    <fullName>Book_Marketing_Call_via_Calendar_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Book Marketing Call via Calendar Link</label>
    <type>Checkbox</type>
</CustomField>