force-app/main/default/objects/New_Dealer_Training__c/fields/Call_in_Order_Process__c.field-meta.xml
<CustomField>
    <fullName>Call_in_Order_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call-in Order Process</label>
    <type>Checkbox</type>
</CustomField>