force-app/main/default/objects/New_Dealer_Training__c/fields/Cases_Event_Store_setup__c.field-meta.xml
<CustomField>
    <fullName>Cases_Event_Store_setup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cases/Event/Store setup</label>
    <type>Checkbox</type>
</CustomField>