force-app/main/default/objects/New_Dealer_Training__c/fields/Check_if_D2D_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Check_if_D2D_Dealer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check if D2D Dealer</label>
    <type>Checkbox</type>
</CustomField>