force-app/main/default/objects/New_Dealer_Training__c/fields/Chuzo_Enablement__c.field-meta.xml
<CustomField>
    <fullName>Chuzo_Enablement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chuzo Enablement</label>
    <type>Checkbox</type>
</CustomField>