force-app/main/default/objects/New_Dealer_Training__c/fields/Confirm_DLR_Subs_SARA_acct_is_active__c.field-meta.xml
<CustomField>
    <fullName>Confirm_DLR_Subs_SARA_acct_is_active__c</fullName>
    <label>Confirm DLR &amp; Subs SARA+ acct is active</label>
    <type>Date</type>
</CustomField>