force-app/main/default/objects/New_Dealer_Training__c/fields/Confirm_Order_Entry_is_active__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Order_Entry_is_active__c</fullName>
    <label>Confirm Order Entry is active</label>
    <type>Date</type>
</CustomField>