force-app/main/default/objects/New_Dealer_Training__c/fields/Confirm_sellers_Logins_were_requested__c.field-meta.xml
<CustomField>
    <fullName>Confirm_sellers_Logins_were_requested__c</fullName>
    <label>Confirm sellers Logins were requested</label>
    <type>Date</type>
</CustomField>