force-app/main/default/objects/New_Dealer_Training__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Number</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Security_New_Dealer_Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>