force-app/main/default/objects/New_Dealer_Training__c/fields/Copy_Paste_process__c.field-meta.xml
<CustomField>
    <fullName>Copy_Paste_process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy &amp; Paste Process</label>
    <type>Checkbox</type>
</CustomField>