force-app/main/default/objects/New_Dealer_Training__c/fields/Covered_Reporting_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Covered_Reporting_Cadence__c</fullName>
    <label>Covered Reporting Cadence</label>
    <type>Date</type>
</CustomField>