force-app/main/default/objects/New_Dealer_Training__c/fields/CPNI_Annual_Training_Non_Employees__c.field-meta.xml
<CustomField>
    <fullName>CPNI_Annual_Training_Non_Employees__c</fullName>
    <label>CPNI Annual Training- Non Employees</label>
    <type>Date</type>
</CustomField>