force-app/main/default/objects/New_Dealer_Training__c/fields/CPNI_Consumer__c.field-meta.xml
<CustomField>
    <fullName>CPNI_Consumer__c</fullName>
    <label>CPNI Consumer</label>
    <type>Date</type>
</CustomField>