force-app/main/default/objects/New_Dealer_Training__c/fields/Current_Month_Incentives__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Incentives__c</fullName>
    <label>Discuss Current Month Incentives</label>
    <type>Date</type>
</CustomField>