force-app/main/default/objects/New_Dealer_Training__c/fields/Date_for_2nd_F_U__c.field-meta.xml
<CustomField>
    <fullName>Date_for_2nd_F_U__c</fullName>
    <label>Date for 2nd F/U</label>
    <type>Date</type>
</CustomField>