force-app/main/default/objects/New_Dealer_Training__c/fields/Dealer_Codes_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Codes_Assigned__c</fullName>
    <label>Dealer Codes Assigned</label>
    <type>Date</type>
</CustomField>