force-app/main/default/objects/New_Dealer_Training__c/fields/Dealer_starting_w_different_Program__c.field-meta.xml
<CustomField>
    <fullName>Dealer_starting_w_different_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DLR starting w/ different Program</label>
    <type>Checkbox</type>
</CustomField>