force-app/main/default/objects/New_Dealer_Training__c/fields/Dealer_would_not_engage__c.field-meta.xml
<CustomField>
    <fullName>Dealer_would_not_engage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer would not engage</label>
    <type>Checkbox</type>
</CustomField>