force-app/main/default/objects/New_Dealer_Training__c/fields/Disable_Pop_up_Blocker__c.field-meta.xml
<CustomField>
    <fullName>Disable_Pop_up_Blocker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Pop-up Blocker</label>
    <type>Checkbox</type>
</CustomField>