force-app/main/default/objects/New_Dealer_Training__c/fields/Discuss_ACP_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Discuss_ACP_Strategy__c</fullName>
    <label>Discuss ACP Strategy</label>
    <type>Date</type>
</CustomField>