force-app/main/default/objects/New_Dealer_Training__c/fields/Discuss_Co_Op__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Co_Op__c</fullName>
    <label>Discuss Co-Op</label>
    <type>Date</type>
</CustomField>