force-app/main/default/objects/New_Dealer_Training__c/fields/Discuss_Current_Dealer_Comp_SPIFs__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Current_Dealer_Comp_SPIFs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discuss Current Dealer Comp/SPIFs</label>
    <type>Checkbox</type>
</CustomField>