force-app/main/default/objects/New_Dealer_Training__c/fields/Discuss_Easy_Care_set_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Easy_Care_set_Expectations__c</fullName>
    <label>Discuss Easy Care/Set Expectations</label>
    <type>Date</type>
</CustomField>