force-app/main/default/objects/New_Dealer_Training__c/fields/Discuss_Easy_Start_Set_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Easy_Start_Set_Expectation__c</fullName>
    <label>Discuss Easy Start/Set Expectation</label>
    <type>Date</type>
</CustomField>