force-app/main/default/objects/New_Dealer_Training__c/fields/Discuss_Frontier_CSA_Form__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Frontier_CSA_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSA Forms</label>
    <type>Checkbox</type>
</CustomField>