force-app/main/default/objects/New_Dealer_Training__c/fields/Discuss_Go_To_Market_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Go_To_Market_Strategy__c</fullName>
    <label>Go To Market Strategy</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>