force-app/main/default/objects/New_Dealer_Training__c/fields/Discuss_importance_of_CSA__c.field-meta.xml
<CustomField>
    <fullName>Discuss_importance_of_CSA__c</fullName>
    <label>Discuss importance of CSA</label>
    <type>Date</type>
</CustomField>