force-app/main/default/objects/New_Dealer_Training__c/fields/Discuss_In_Store_Expectations_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Discuss_In_Store_Expectations_Strategy__c</fullName>
    <label>Discuss In Store Exps/Strategy (NR Only)</label>
    <type>Date</type>
</CustomField>