force-app/main/default/objects/New_Dealer_Training__c/fields/Discuss_In_Store_Marketing_Supplies__c.field-meta.xml
<CustomField>
    <fullName>Discuss_In_Store_Marketing_Supplies__c</fullName>
    <label>Discuss In Store Mktg Supplies (NR Only)</label>
    <type>Date</type>
</CustomField>