force-app/main/default/objects/New_Dealer_Training__c/fields/Discuss_Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Marketing_Campaign__c</fullName>
    <label>Discuss Marketing Campaign</label>
    <type>Date</type>
</CustomField>