force-app/main/default/objects/New_Dealer_Training__c/fields/Discuss_MSOC_Opportunity_with_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Discuss_MSOC_Opportunity_with_Dealer__c</fullName>
    <label>Discuss MSOC Opportunity with Dealer</label>
    <type>Date</type>
</CustomField>