force-app/main/default/objects/New_Dealer_Training__c/fields/Discuss_PV_Sales_and_Support_Structure__c.field-meta.xml
<CustomField>
    <fullName>Discuss_PV_Sales_and_Support_Structure__c</fullName>
    <label>Discuss PV Sales and Support Structure</label>
    <type>Date</type>
</CustomField>