force-app/main/default/objects/New_Dealer_Training__c/fields/Discuss_SMB_and_D2D_opportunities__c.field-meta.xml
<CustomField>
    <fullName>Discuss_SMB_and_D2D_opportunities__c</fullName>
    <label>Discuss SMB and D2D opportunities</label>
    <type>Date</type>
</CustomField>