force-app/main/default/objects/New_Dealer_Training__c/fields/Discuss_utilizing_Reward_Card_process__c.field-meta.xml
<CustomField>
    <fullName>Discuss_utilizing_Reward_Card_process__c</fullName>
    <label>Discuss utilizing Reward Card process</label>
    <type>Date</type>
</CustomField>