force-app/main/default/objects/New_Dealer_Training__c/fields/Discuss_Viasat_for_Business__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Viasat_for_Business__c</fullName>
    <label>Discuss Viasat for Business</label>
    <type>Date</type>
</CustomField>