force-app/main/default/objects/New_Dealer_Training__c/fields/Discuss_Viasat_Retailer_Website__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Viasat_Retailer_Website__c</fullName>
    <label>Discuss Viasat Retailer Website</label>
    <type>Date</type>
</CustomField>