force-app/main/default/objects/New_Dealer_Training__c/fields/DLR_confirms_correct_FFL_NFFL_codes__c.field-meta.xml
<CustomField>
    <fullName>DLR_confirms_correct_FFL_NFFL_codes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DLR confirms correct FFL/NFFL codes</label>
    <type>Checkbox</type>
</CustomField>