force-app/main/default/objects/New_Dealer_Training__c/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <label>Do Not Contact</label>
    <type>Date</type>
</CustomField>