force-app/main/default/objects/New_Dealer_Training__c/fields/DTV_PRD_SRV_Disclosure_Consent__c.field-meta.xml
<CustomField>
    <fullName>DTV_PRD_SRV_Disclosure_Consent__c</fullName>
    <label>DTV PRD/SRV Disclosure &amp; Consent</label>
    <type>Date</type>
</CustomField>