force-app/main/default/objects/New_Dealer_Training__c/fields/Equipment_and_Installation__c.field-meta.xml
<CustomField>
    <fullName>Equipment_and_Installation__c</fullName>
    <label>Equipment and Installation</label>
    <type>Date</type>
</CustomField>