force-app/main/default/objects/New_Dealer_Training__c/fields/Establish_306090_day_sales_plan__c.field-meta.xml
<CustomField>
    <fullName>Establish_306090_day_sales_plan__c</fullName>
    <label>Activation targets first 30 days</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>