force-app/main/default/objects/New_Dealer_Training__c/fields/Estimated_Number_of_Sellers__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Number_of_Sellers__c</fullName>
    <label>Estimated Number of Sellers</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>