force-app/main/default/objects/New_Dealer_Training__c/fields/External_New_Dealer_Training_ID__c.field-meta.xml
<CustomField>
    <fullName>External_New_Dealer_Training_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External New Dealer Training ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>