force-app/main/default/objects/New_Dealer_Training__c/fields/F_U_Next_Steps_e_mail_Sent__c.field-meta.xml
<CustomField>
    <fullName>F_U_Next_Steps_e_mail_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>F/U &amp; Next Steps e-mail Sent</label>
    <type>Checkbox</type>
</CustomField>