force-app/main/default/objects/New_Dealer_Training__c/fields/Features_and_Add_On_s__c.field-meta.xml
<CustomField>
    <fullName>Features_and_Add_On_s__c</fullName>
    <label>Features and Add On&apos;s</label>
    <type>Date</type>
</CustomField>