force-app/main/default/objects/New_Dealer_Training__c/fields/Footprint__c.field-meta.xml
<CustomField>
    <fullName>Footprint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Footprint</label>
    <type>Checkbox</type>
</CustomField>