force-app/main/default/objects/New_Dealer_Training__c/fields/Frontier_PIDs__c.field-meta.xml
<CustomField>
    <fullName>Frontier_PIDs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frontier PIDs</label>
    <type>Checkbox</type>
</CustomField>