force-app/main/default/objects/New_Dealer_Training__c/fields/FSM_for_Retailers__c.field-meta.xml
<CustomField>
    <fullName>FSM_for_Retailers__c</fullName>
    <label>FSM for Retailers</label>
    <type>Date</type>
</CustomField>