force-app/main/default/objects/New_Dealer_Training__c/fields/Full_Potential_Monthly_Activations__c.field-meta.xml
<CustomField>
    <fullName>Full_Potential_Monthly_Activations__c</fullName>
    <label>Full Potential Monthly Activations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>