force-app/main/default/objects/New_Dealer_Training__c/fields/Global_Partner_Portal__c.field-meta.xml
<CustomField>
    <fullName>Global_Partner_Portal__c</fullName>
    <label>Global Partner Portal</label>
    <type>Date</type>
</CustomField>