force-app/main/default/objects/New_Dealer_Training__c/fields/How_will_DLR_Sell_Marketing_funds__c.field-meta.xml
<CustomField>
    <fullName>How_will_DLR_Sell_Marketing_funds__c</fullName>
    <label>How will DLR Sell/Marketing funds</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>