force-app/main/default/objects/New_Dealer_Training__c/fields/Internet_Training__c.field-meta.xml
<CustomField>
    <fullName>Internet_Training__c</fullName>
    <label>Internet  Training</label>
    <type>Date</type>
</CustomField>