force-app/main/default/objects/New_Dealer_Training__c/fields/Intro_to_Viasat_Business_Products__c.field-meta.xml
<CustomField>
    <fullName>Intro_to_Viasat_Business_Products__c</fullName>
    <label>Intro to Viasat Business Products</label>
    <type>Date</type>
</CustomField>