force-app/main/default/objects/New_Dealer_Training__c/fields/Launch_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Launch_Strategy__c</fullName>
    <label>Launch Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>