force-app/main/default/objects/New_Dealer_Training__c/fields/Log_into_Global_Partner_Portal__c.field-meta.xml
<CustomField>
    <fullName>Log_into_Global_Partner_Portal__c</fullName>
    <label>Log into Global Partner Portal</label>
    <type>Date</type>
</CustomField>