force-app/main/default/objects/New_Dealer_Training__c/fields/Mobility_Training__c.field-meta.xml
<CustomField>
    <fullName>Mobility_Training__c</fullName>
    <label>Mobility Training</label>
    <type>Date</type>
</CustomField>