force-app/main/default/objects/New_Dealer_Training__c/fields/New_Dealer_Onboarding_Assessment_NR__c.field-meta.xml
<CustomField>
    <fullName>New_Dealer_Onboarding_Assessment_NR__c</fullName>
    <label>NR New Dealer Onboarding Assessment</label>
    <type>Date</type>
</CustomField>