force-app/main/default/objects/New_Dealer_Training__c/fields/New_Dealer_Welcome_Call__c.field-meta.xml
<CustomField>
    <fullName>New_Dealer_Welcome_Call__c</fullName>
    <label>New Dealer Welcome Call</label>
    <type>Date</type>
</CustomField>