force-app/main/default/objects/New_Dealer_Training__c/fields/New_DLR_Dev_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>New_DLR_Dev_Call_Status__c</fullName>
    <defaultValue>&quot;Not Started&quot;</defaultValue>
    <label>New DLR Dev Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>DLR would not engage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>