force-app/main/default/objects/New_Dealer_Training__c/fields/Next_Steps_from_Call__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_from_Call__c</fullName>
    <label>Next Steps from Call</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>