force-app/main/default/objects/New_Dealer_Training__c/fields/NR_Amendment_trainings_complete__c.field-meta.xml
<CustomField>
    <fullName>NR_Amendment_trainings_complete__c</fullName>
    <label>NR Amendment Trainings Complete</label>
    <type>Date</type>
</CustomField>