force-app/main/default/objects/New_Dealer_Training__c/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding</label>
    <referenceTo>Onboarding__c</referenceTo>
    <relationshipLabel>New Dealer Trainings</relationshipLabel>
    <relationshipName>New_Dealer_Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>