force-app/main/default/objects/New_Dealer_Training__c/fields/Onboarding_Notes__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>