force-app/main/default/objects/New_Dealer_Training__c/fields/Order_Entry_Setup__c.field-meta.xml
<CustomField>
    <fullName>Order_Entry_Setup__c</fullName>
    <label>Order Entry Setup</label>
    <type>Date</type>
</CustomField>