force-app/main/default/objects/New_Dealer_Training__c/fields/Order_Entry_Training__c.field-meta.xml
<CustomField>
    <fullName>Order_Entry_Training__c</fullName>
    <label>Order Entry Training</label>
    <type>Date</type>
</CustomField>