force-app/main/default/objects/New_Dealer_Training__c/fields/Order_Entry_Training_NR__c.field-meta.xml
<CustomField>
    <fullName>Order_Entry_Training_NR__c</fullName>
    <label>NR Order Entry Training</label>
    <type>Date</type>
</CustomField>