force-app/main/default/objects/New_Dealer_Training__c/fields/Partner_Portal__c.field-meta.xml
<CustomField>
    <fullName>Partner_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Portal</label>
    <type>Checkbox</type>
</CustomField>