force-app/main/default/objects/New_Dealer_Training__c/fields/PCI_Compliance__c.field-meta.xml
<CustomField>
    <fullName>PCI_Compliance__c</fullName>
    <label>PCI Compliance</label>
    <type>Date</type>
</CustomField>