force-app/main/default/objects/New_Dealer_Training__c/fields/PerfectSource_Guide_Overview__c.field-meta.xml
<CustomField>
    <fullName>PerfectSource_Guide_Overview__c</fullName>
    <label>PerfectSource Guide Overview</label>
    <type>Date</type>
</CustomField>