force-app/main/default/objects/New_Dealer_Training__c/fields/Pitched_Other_Services__c.field-meta.xml
<CustomField>
    <fullName>Pitched_Other_Services__c</fullName>
    <label>Pitched Other Services</label>
    <type>Date</type>
</CustomField>