force-app/main/default/objects/New_Dealer_Training__c/fields/PLE_Essential_Courses_Complete__c.field-meta.xml
<CustomField>
    <fullName>PLE_Essential_Courses_Complete__c</fullName>
    <label>PLE Essential Courses Complete</label>
    <type>Date</type>
</CustomField>