force-app/main/default/objects/New_Dealer_Training__c/fields/PP_Order_Entry_Guide_Training__c.field-meta.xml
<CustomField>
    <fullName>PP_Order_Entry_Guide_Training__c</fullName>
    <label>PP Order Entry Guide Training</label>
    <type>Date</type>
</CustomField>