force-app/main/default/objects/New_Dealer_Training__c/fields/Preventing_Fraud_for_DLRS__c.field-meta.xml
<CustomField>
    <fullName>Preventing_Fraud_for_DLRS__c</fullName>
    <label>Preventing Fraud for DLRS</label>
    <type>Date</type>
</CustomField>