force-app/main/default/objects/New_Dealer_Training__c/fields/Privacy_Info_Security__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Info_Security__c</fullName>
    <label>Privacy &amp; Info Security</label>
    <type>Date</type>
</CustomField>