force-app/main/default/objects/New_Dealer_Training__c/fields/Products_and_Services__c.field-meta.xml
<CustomField>
    <fullName>Products_and_Services__c</fullName>
    <label>Products and Services</label>
    <type>Date</type>
</CustomField>