force-app/main/default/objects/New_Dealer_Training__c/fields/PV_Marketing_Webinar__c.field-meta.xml
<CustomField>
    <fullName>PV_Marketing_Webinar__c</fullName>
    <label>PV Marketing Webinar</label>
    <type>Date</type>
</CustomField>