force-app/main/default/objects/New_Dealer_Training__c/fields/Recap_AM_Call_Notable_Changes__c.field-meta.xml
<CustomField>
    <fullName>Recap_AM_Call_Notable_Changes__c</fullName>
    <label>Recap AM Call, Notable Changes:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>