force-app/main/default/objects/New_Dealer_Training__c/fields/Red_Green_Report_Overview__c.field-meta.xml
<CustomField>
    <fullName>Red_Green_Report_Overview__c</fullName>
    <label>Red/Green Report Overview</label>
    <type>Date</type>
</CustomField>