force-app/main/default/objects/New_Dealer_Training__c/fields/Register_for_FSM__c.field-meta.xml
<CustomField>
    <fullName>Register_for_FSM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FSM Setup</label>
    <type>Checkbox</type>
</CustomField>