force-app/main/default/objects/New_Dealer_Training__c/fields/Register_for_Required_Viasat_Training__c.field-meta.xml
<CustomField>
    <fullName>Register_for_Required_Viasat_Training__c</fullName>
    <label>Register for Required Viasat Training</label>
    <type>Date</type>
</CustomField>