force-app/main/default/objects/New_Dealer_Training__c/fields/Remind_Attend_VS_Onboarding_call__c.field-meta.xml
<CustomField>
    <fullName>Remind_Attend_VS_Onboarding_call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remind: Attend VS Onboarding call</label>
    <type>Checkbox</type>
</CustomField>