force-app/main/default/objects/New_Dealer_Training__c/fields/Required_Trainings_Complete__c.field-meta.xml
<CustomField>
    <fullName>Required_Trainings_Complete__c</fullName>
    <label>Required Trainings Complete</label>
    <type>Date</type>
</CustomField>