force-app/main/default/objects/New_Dealer_Training__c/fields/Retailer_Basics__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Basics__c</fullName>
    <label>Retailer Basics</label>
    <type>Date</type>
</CustomField>