force-app/main/default/objects/New_Dealer_Training__c/fields/Retailer_Type__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Type__c</fullName>
    <label>Retailer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>SO</fullName>
            </value>
            <value>
                <fullName>Combo</fullName>
            </value>
            <value>
                <fullName>National Agent</fullName>
            </value>
            <value>
                <fullName>National Agent and National Retail</fullName>
            </value>
            <value>
                <fullName>National Retail</fullName>
            </value>
            <value>
                <fullName>National Agent and D2D</fullName>
            </value>
            <value>
                <fullName>National Agent, D2D and National Retail</fullName>
            </value>
            <value>
                <fullName>D2D</fullName>
            </value>
            <value>
                <fullName>D2D and National Retail</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Intercept F2F</fullName>
            </value>
            <value>
                <fullName>Brick &amp; Mortar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>