force-app/main/default/objects/New_Dealer_Training__c/fields/Review_MST_CCKM_confirm_DLR_access__c.field-meta.xml
<CustomField>
    <fullName>Review_MST_CCKM_confirm_DLR_access__c</fullName>
    <label>Review MST/ CCKM &amp; confirm DLR access</label>
    <type>Date</type>
</CustomField>