force-app/main/default/objects/New_Dealer_Training__c/fields/Sales_Agent_Standards_of_Conduct__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agent_Standards_of_Conduct__c</fullName>
    <label>Sales Agent Standards of Conduct</label>
    <type>Date</type>
</CustomField>