force-app/main/default/objects/New_Dealer_Training__c/fields/Sales_Integrity_for_Indirect__c.field-meta.xml
<CustomField>
    <fullName>Sales_Integrity_for_Indirect__c</fullName>
    <label>Sales Integrity for Indirect</label>
    <type>Date</type>
</CustomField>