force-app/main/default/objects/New_Dealer_Training__c/fields/Sales_Quest_login_D2D__c.field-meta.xml
<CustomField>
    <fullName>Sales_Quest_login_D2D__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Quest Login (D2D)</label>
    <type>Checkbox</type>
</CustomField>