force-app/main/default/objects/New_Dealer_Training__c/fields/Sales_Rabbit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rabbit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Rabbit</label>
    <type>Checkbox</type>
</CustomField>