force-app/main/default/objects/New_Dealer_Training__c/fields/Sara_Plus_Account_Setup__c.field-meta.xml
<CustomField>
    <fullName>Sara_Plus_Account_Setup__c</fullName>
    <label>Sara Plus Account Setup</label>
    <type>Date</type>
</CustomField>