force-app/main/default/objects/New_Dealer_Training__c/fields/Selling_start_date__c.field-meta.xml
<CustomField>
    <fullName>Selling_start_date__c</fullName>
    <label>Selling start date</label>
    <type>Date</type>
</CustomField>