force-app/main/default/objects/New_Dealer_Training__c/fields/Set_up_NAM_follow_up_training__c.field-meta.xml
<CustomField>
    <fullName>Set_up_NAM_follow_up_training__c</fullName>
    <label>Set up NAM follow up Training (NR Only)</label>
    <type>Date</type>
</CustomField>