force-app/main/default/objects/New_Dealer_Training__c/fields/Sign_Dealer_into_PV_Website__c.field-meta.xml
<CustomField>
    <fullName>Sign_Dealer_into_PV_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sign Dealer into PV Website</label>
    <type>Checkbox</type>
</CustomField>