force-app/main/default/objects/New_Dealer_Training__c/fields/Sign_Up_Dealer_for_Sara_Plus_Training__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up_Dealer_for_Sara_Plus_Training__c</fullName>
    <label>Sign Up Dealer for Sara Plus Training</label>
    <type>Date</type>
</CustomField>