force-app/main/default/objects/New_Dealer_Training__c/fields/Spectrum_Onboarding_Chuzo__c.field-meta.xml
<CustomField>
    <fullName>Spectrum_Onboarding_Chuzo__c</fullName>
    <label>Spectrum Onboarding/Chuzo</label>
    <type>Date</type>
</CustomField>